--- a/Aboutus.html
+++ b/Aboutus.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.googleapis.com/css?family=Corinthia" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Rouge+Script&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Corinthia" rel="stylesheet" type="text/css" />
     <link href="http://fonts.googleapis.com/css?family=Kings" rel="stylesheet" type="text/css" />
@@ -21,7 +22,6 @@
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="Aboutus.html">About us</a></li>
-                <li><a href="Login.html">Login</a></li>
             </ul>
         </div>
     </nav>
