--- a/Gallery.html
+++ b/Gallery.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.googleapis.com/css?family=Corinthia" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Rouge+Script&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Corinthia" rel="stylesheet" type="text/css" />
+    <link href="http://fonts.googleapis.com/css?family=Kings" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -17,7 +24,6 @@
                 <li><a href="Home.html">Home</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="Aboutus.html">About us</a></li>
-                <li><a href="Login.html">Login</a></li>
             </ul>
         </div>
     </nav>
