--- a/Aboutus.html
+++ b/Aboutus.html
@@ -20,7 +20,7 @@
             <div class="logo"><h1>C E J U H A R A&#8482;</h1></div>
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Products.html">Products</a></li>
                 <li><a href="Aboutus.html">About us</a></li>
             </ul>
         </div>
