--- a/Home.html
+++ b/Home.html
@@ -20,7 +20,7 @@
             <div class="logo"><h1>C E J U H A R A&#8482;</h1></div>
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Products.html">Products</a></li>
                 <li><a href="Aboutus.html">About us</a></li>
             </ul>
         </div>
@@ -50,7 +50,7 @@
                     Where timeless elegance meets exceptional craftsmanship. Discover our exclusive collection of luxury rings, each designed to embody sophistication
                     and individuality. Experience the art of fine jewelry redefined.
                 </p>
-                <button id="ViewGallery" class="btnGal" style="font-size: 20px; font-weight: lighter;">VIEW GALLERY</button>
+                <button id="ViewGallery" class="btnGal" style="font-size: 20px; font-weight: lighter;">VIEW PRODUCTS</button>
             </div>
             <div class="galimage-section">
                 <img src="https://st2.depositphotos.com/1000559/6728/i/450/depositphotos_67283077-stock-photo-beautiful-ring-with-amethyst.jpg" alt="Gemstone Rings">
@@ -74,7 +74,7 @@
     <script>
         $(document).ready(function() {
             $('#ViewGallery').on('click', function() {
-                window.location.href = 'Gallery.html';
+                window.location.href = 'Products.html';
             });
         });
     </script>
