--- a/Login.html
+++ b/Login.html
@@ -34,7 +34,7 @@
                 <label for="payment">Account Payment Number:</label>
                 <input type="number" id="paymentnum" placeholder="Enter payment number" required>
             </div>
-            <button type="submit">Login</button>
+            <button id="submit">Login</button>
         </form>
         <div id="message"></div> 
     </div>
